tests/pipeline/snapshots/integration__pipeline__lir__snapshot_lir_record_field_access.snap
---
source: tests/pipeline/lir.rs
expression: lir
---
LirProgram {
    functions: [
        LirFunction {
            name: "main",
            params: [],
            ret_type: Unit,
            requires: Row(
                [],
                None,
            ),
            throws: Row(
                [],
                None,
            ),
            body: [
                Let {
                    name: "__t0",
                    typ: I64,
                    expr: Record {
                        fields: [
                            (
                                "x",
                                Int(
                                    1,
                                ),
                            ),
                            (
                                "y",
                                Int(
                                    2,
                                ),
                            ),
                        ],
                        typ: I64,
                    },
                },
                Let {
                    name: "r",
                    typ: I64,
                    expr: Atom(
                        Var {
                            name: "__t0",
                            typ: I64,
                        },
                    ),
                },
                Let {
                    name: "__t1",
                    typ: I64,
                    expr: ObjectField {
                        value: Var {
                            name: "r",
                            typ: I64,
                        },
                        index: 0,
                        typ: I64,
                    },
                },
                Let {
                    name: "v",
                    typ: I64,
                    expr: Atom(
                        Var {
                            name: "__t1",
                            typ: I64,
                        },
                    ),
                },
            ],
            ret: Unit,
            span: 5..109,
            source_file: None,
            source_line: None,
        },
    ],
    externals: [],
}
