tests/pipeline/snapshots/integration__pipeline__lir__snapshot_lir_tail_call.snap
---
source: tests/pipeline/lir.rs
expression: lir
---
LirProgram {
    functions: [
        LirFunction {
            name: "loop_n",
            params: [
                LirParam {
                    label: "n",
                    name: "n",
                    typ: I64,
                },
            ],
            ret_type: I64,
            requires: Row(
                [],
                None,
            ),
            throws: Row(
                [],
                None,
            ),
            body: [
                Let {
                    name: "__t0",
                    typ: Bool,
                    expr: Binary {
                        op: Le,
                        lhs: Var {
                            name: "n",
                            typ: I64,
                        },
                        rhs: Int(
                            0,
                        ),
                        typ: Bool,
                    },
                },
                IfReturn {
                    cond: Var {
                        name: "__t0",
                        typ: Bool,
                    },
                    then_body: [],
                    then_ret: Int(
                        0,
                    ),
                    else_body: [],
                    else_ret: None,
                    ret_type: I64,
                },
                Let {
                    name: "__t1",
                    typ: I64,
                    expr: Binary {
                        op: Sub,
                        lhs: Var {
                            name: "n",
                            typ: I64,
                        },
                        rhs: Int(
                            1,
                        ),
                        typ: I64,
                    },
                },
                Let {
                    name: "__t2",
                    typ: I64,
                    expr: TailCall {
                        func: "loop_n",
                        args: [
                            (
                                "n",
                                Var {
                                    name: "__t1",
                                    typ: I64,
                                },
                            ),
                        ],
                        typ: I64,
                    },
                },
            ],
            ret: Var {
                name: "__t2",
                typ: I64,
            },
            span: 5..115,
        },
        LirFunction {
            name: "main",
            params: [],
            ret_type: Unit,
            requires: Row(
                [],
                None,
            ),
            throws: Row(
                [],
                None,
            ),
            body: [
                Let {
                    name: "__t0",
                    typ: I64,
                    expr: Call {
                        func: "loop_n",
                        args: [
                            (
                                "n",
                                Int(
                                    10,
                                ),
                            ),
                        ],
                        typ: I64,
                    },
                },
                Let {
                    name: "_",
                    typ: I64,
                    expr: Atom(
                        Var {
                            name: "__t0",
                            typ: I64,
                        },
                    ),
                },
            ],
            ret: Unit,
            span: 120..203,
        },
    ],
    externals: [],
}
