tests/pipeline/snapshots/integration__pipeline__lir__snapshot_lir_while_loop.snap
---
source: tests/pipeline/lir.rs
expression: lir
---
LirProgram {
    functions: [
        LirFunction {
            name: "main",
            params: [],
            ret_type: Unit,
            requires: Row(
                [],
                None,
            ),
            throws: Row(
                [],
                None,
            ),
            body: [
                Let {
                    name: "i",
                    typ: I64,
                    expr: Atom(
                        Int(
                            0,
                        ),
                    ),
                },
                Loop {
                    cond_stmts: [
                        Let {
                            name: "__t0",
                            typ: Bool,
                            expr: Binary {
                                op: Lt,
                                lhs: Var {
                                    name: "i",
                                    typ: I64,
                                },
                                rhs: Int(
                                    5,
                                ),
                                typ: Bool,
                            },
                        },
                        Let {
                            name: "__t1",
                            typ: Bool,
                            expr: Binary {
                                op: Eq,
                                lhs: Var {
                                    name: "__t0",
                                    typ: Bool,
                                },
                                rhs: Bool(
                                    false,
                                ),
                                typ: Bool,
                            },
                        },
                    ],
                    cond: Var {
                        name: "__t1",
                        typ: Bool,
                    },
                    body: [
                        Let {
                            name: "__t2",
                            typ: I64,
                            expr: Binary {
                                op: Add,
                                lhs: Var {
                                    name: "i",
                                    typ: I64,
                                },
                                rhs: Int(
                                    1,
                                ),
                                typ: I64,
                            },
                        },
                        Let {
                            name: "i",
                            typ: I64,
                            expr: Atom(
                                Var {
                                    name: "__t2",
                                    typ: I64,
                                },
                            ),
                        },
                    ],
                },
            ],
            ret: Unit,
            span: 5..138,
        },
    ],
    externals: [],
}
